feat: redesign hero section with two-column layout and enhanced CTA styling

--- a/static/index.html
+++ b/static/index.html
@@ -44,31 +44,45 @@
   </header>
 
   <section class="hero">
-    <div class="social-proof">
-      <span class="badge">Trusted by 500+ developers</span>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1>Stro — Record. Summarize. Focus.</h1>
+        <p>Turn every meeting into actionable knowledge with Stro, your privacy-first macOS tool for real-time transcription, quick notes, and clear summaries.</p>
+        <a href="https://stro.app/download/Stro.dmg" class="cta-button">Download for macOS</a>
+        <div class="download-details">
+          <p class="version-info" style="font-size: 0.9rem; margin-bottom: 0.5rem;">Version 1.0.0 (Beta) • Free during beta</p>
+          <p class="system-req" style="font-size: 0.9rem; margin-bottom: 0.5rem;">Requires macOS 12.0 or later</p>
+        </div>
+        <div class="social-proof">
+          <span class="badge">Trusted by 500+ developers</span>
+        </div>
+      </div>
+      <div class="hero-image">
+        <img src="images/stro-app-screenshot.png" alt="Stro app interface showing a meeting recording and transcript" width="600" height="400" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22 viewBox=%220 0 600 400%22%3E%3Crect width=%22600%22 height=%22400%22 fill=%22%23EBF5FF%22 stroke=%22%233B82F6%22 stroke-width=%222%22 rx=%2210%22 /%3E%3Ctext x=%22300%22 y=%22180%22 font-family=%22Arial%22 font-size=%2220%22 text-anchor=%22middle%22 fill=%22%233B82F6%22%3EStro App Interface%3C/text%3E%3Ctext x=%22300%22 y=%22220%22 font-family=%22Arial%22 font-size=%2216%22 text-anchor=%22middle%22 fill=%22%234B5563%22%3ETranscription and summary view%3C/text%3E%3C/svg%3E'">
+      </div>
     </div>
-    <h1>Stro — Record. Summarize. Focus.</h1>
-    <p>Turn every meeting into actionable knowledge with Stro, your privacy-first macOS tool for real-time transcription, quick notes, and clear summaries.</p>
-    <a href="https://stro.app/download/Stro.dmg" class="cta-button">Download for macOS</a>
-    <p class="system-requirements">Requires macOS 12.0 or later</p>
   </section>
 
   <section class="features" id="how-it-works">
-    <div class="feature-card" data-animate>
-      <h3>🎙️ Transcribe as You Talk</h3>
-      <p>Stro captures your meetings in real-time and transcribes them automatically. Stay focused on the conversation — Stro handles the rest.</p>
-    </div>
-    <div class="feature-card" data-animate>
-      <h3>🗒️ Add Quick Notes</h3>
-      <p>Jot down your own notes or highlight key moments. They stay timestamped and synced with the transcript.</p>
-    </div>
-    <div class="feature-card" data-animate>
-      <h3>🧠 Structured Summaries</h3>
-      <p>Once your meeting ends, Stro generates a clean summary with key points, decisions, and next steps.</p>
-    </div>
-    <div class="feature-card" data-animate>
-      <h3>🔒 Built for Privacy</h3>
-      <p>Your audio never leaves your Mac. Only transcripts are lightly processed for summaries. No raw recordings go to the cloud. You're always in control.</p>
+    <h2>Why use Stro?</h2>
+    <p>Stro is your private memory for the conversations that matter. Mac-native AI meeting recorder with local-first privacy.</p>
+    <div class="feature-cards">
+      <div class="feature-card" data-animate>
+        <h3>🎙️ Transcribe as You Talk</h3>
+        <p>Stro captures your meetings in real-time and transcribes them automatically. Stay focused on the conversation — Stro handles the rest.</p>
+      </div>
+      <div class="feature-card" data-animate>
+        <h3>🗒️ Add Quick Notes</h3>
+        <p>Jot down your own notes or highlight key moments. They stay timestamped and synced with the transcript.</p>
+      </div>
+      <div class="feature-card" data-animate>
+        <h3>🧠 Structured Summaries</h3>
+        <p>Once your meeting ends, Stro generates a clean summary with key points, decisions, and next steps.</p>
+      </div>
+      <div class="feature-card" data-animate>
+        <h3>🔒 Built for Privacy</h3>
+        <p>Your audio never leaves your Mac. Only transcripts are lightly processed for summaries. No raw recordings go to the cloud. You're always in control.</p>
+      </div>
     </div>
   </section>
 
